--- a/exercise.html
+++ b/exercise.html
@@ -8,13 +8,25 @@
     <title>Exercise</title>
     <link rel="stylesheet" href="about_style.css">
 </head>
+<style>
+ body{
+     padding: 2px 40px;
+        background-image: url('tc.jpg') ;
+        width: 100%;
+        background-repeat: no-repeat;
+}
+.bg{
+    background-color: white;
+}
+</style>
+
 <body>
     <nav class="navbar background">
         <ul class="nav-list">
             <div class="logo">
                 <img src="11.png" alt="logo">
             </div>
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="#services">Food</a></li>
             <li><a href="exercise.html">Exercise</a></li>
